--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
 
       - run:
           name: Set up JDK 11
-          command: sudo apt-get update && sudo apt-get install openjdk-11-jdk -y
+          command: sudo apt-get update && sudo apt-get install openjdk-11-jdk git-core gnupg flex bison gperf libsdl1.2-dev libesd0-dev squashfs-tools build-essential zip curl libncurses5-dev zlib1g-dev openjdk-8-jre openjdk-8-jdk pngcrush schedtool libxml2 libxml2-utils xsltproc lzop libc6-dev schedtool g++-multilib lib32z1-dev lib32ncurses5-dev lib32readline-gplv2-dev gcc-multilib maven tmux screen w3m ncftp -y
 
       - run:
           name: Set up Android SDK
@@ -36,7 +36,7 @@ jobs:
             PATH="${HOME}/.bin:${PATH}"
             curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
             chmod a+rx ~/.bin/repo
-            repo init -u https://github.com/Evolution-X/manifest -b tiramisu
+            repo init -u https://github.com/Evolution-X/manifest -b tiramisu -y
             repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
 
       - run:
