Update Evolution X Android 13 Tulip.yml

--- a/Evolution X Android 13 Tulip.yml
+++ b/Evolution X Android 13 Tulip.yml
@@ -20,8 +20,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          sudo apt-get update && sudo apt-get install openjdk-11-jdk -y
-          sudo apt-get install -y git-core gnupg flex bison gperf libsdl1.2-dev libesd0-dev squashfs-tools build-essential zip curl libncurses5-dev zlib1g-dev openjdk-8-jre openjdk-8-jdk pngcrush schedtool libxml2 libxml2-utils xsltproc lzop libc6-dev schedtool g++-multilib lib32z1-dev lib32ncurses5-dev lib32readline-gplv2-dev gcc-multilib maven tmux screen w3m ncftp
+          sudo apt-get update && sudo apt-get install openjdk-11-jdk git gnupg flex bison gperf libsdl1.2-dev squashfs-tools build-essential zip curl libncurses5-dev zlib1g-dev openjdk-11-jre pngcrush schedtool libxml2 libxml2-utils xsltproc lzop libc6-dev schedtool g++-multilib lib32z1-dev lib32ncurses-dev  gcc-multilib maven tmux screen w3m ncftp -y
 
     - task: Bash@3
       inputs:
@@ -45,10 +44,13 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          mkdir -p ~/.bin
-          PATH="${HOME}/.bin:${PATH}"
-          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/.bin/repo
-          chmod a+rx ~/.bin/repo
+          mkdir -p ~/bin
+          curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
+          chmod a+x ~/bin/repo
+          export PATH=~/bin:$PATH
+          source ~/.bashrc
+          git config --global user.name "find-404"
+          git config --global user.email "firdiansyaindrianto@#gmail.com"
           repo init -u https://github.com/Evolution-X/manifest -b tiramisu
           repo sync -c -j$(nproc --all) --force-sync --no-clone-bundle --no-tags
 
@@ -56,7 +58,8 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          . /build/envsetup.sh
+          export PATH=~/bin:$PATH
+          . build/envsetup.sh
           lunch evolution_tulip-userdebug
           mka evolution
 
