--- a/Evolution X Android 13 Tulip.yml
+++ b/Evolution X Android 13 Tulip.yml
@@ -15,6 +15,19 @@ stages:
     pool:
       vmImage: 'ubuntu-20.04'
     steps:
+    
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(Build.ArtifactStagingDirectory)'
+        Contents: '**'
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+        AdditionalArguments: '--size 200'
+
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          sudo df -h
 
     - task: Bash@3
       inputs:
